# wav2lip-hq-updated-ESRGAN

./: .gitignore  LipSync.ipynb  inference.py  pyproject.toml
basicsr/: apply_sr.py
