[project]
name = "wav2lip"
version = "0.1.0"
description = "Wav2Lip HQ + ESRGAN integration"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "addict",
    "future",
    "librosa==0.9.1",
    "lmdb",
    "numba",
    "numpy",
    "opencv-contrib-python>=4.2.0.34",
    "opencv-python",
    "Pillow",
    "pyyaml",
    "requests",
    "scikit-image",
    "scipy",
    "tb-nightly",
    "torch>=1.3",
    "torchvision",
    "tqdm",
    "yapf",
    "realesrgan",
    "gfpgan",
]
